--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
 
                         <div class="certificate__content">
                            <h3 class="certificate__title"><b>Cloud</b></h3>
+                           <p class="certificate__description">• <b>Cloud Services Administrator: AWS, GCP, Azure</b><br>4Linux | Issued in March 2023 - 40 Hours</p>
                            <p class="certificate__description">• <b>Udemy Ultimate AWS Certified Cloud Practitioner</b><br>Udemy | Issued in June 2022 - 19 Hours</p>
                            <p class="certificate__description">• <b>Deploy on Amazon EC2: High Availability and Scalability of an Application</b><br>Alura | Issued in April 2022 - 10 Hours</p>
                            <p class="certificate__description">• <b>Amazon Lightsail: Making the Cloud Uncomplicated</b><br>Alura | Issued in April 2022 - 8 Hours</p>
