--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                             <h1 class="home__title">
                                 <b>JONATHAN</b> ABRANTES
-                                </h1><h3 class="home__profession"><b>DevOps</b> Analyst</h3>
+                                </h1><h3 class="home__profession"><b>DevOps</b> Analyst/Consultant</h3>
                             
                         </div>
 
@@ -129,7 +129,7 @@
                     <h2 class="section-title">Profile</h2>
 
                     <p class="profile__description">
-                        Professional with more than 7 years in Information Technology, working as a DevOps analyst.
+                        Professional with more than 8 years in Information Technology, working as a DevOps analyst/consultant.
                     </p>
                 </section>
 
@@ -194,7 +194,7 @@
                                 <span class="skills__circle"></span>Docker, Docker Compose and Swarm
                             </li>
                             <li class="skills__name">
-                                <span class="skills__circle"></span>AWS
+                                <span class="skills__circle"></span>AWS, GCP, Azure
                             </li>
                             <li class="skills__name">
                                 <span class="skills__circle"></span>CI/CD
@@ -239,6 +239,31 @@
                 <section class="experience section" id="experience">
                     <h2 class="section-title">Experience</h2>
 
+                    <section class="experience section" id="experience">
+                        <h2 class="section-title">Experiência</h2>
+    
+                        <div class="experience__container bd-grid">
+                            <div class="experience__content">
+                                    <div class="experience__time">
+                                        <span class="experience__rounder"></span>
+                                        <span class="experience__line"></span>
+                                    </div>
+                                    <div class="experience__data bd-grid">
+                                        <h3 class="experience__title">DevOps Consultant</h3>
+                                        <span class="experience__company">2023-Current - <b>Agap2IT Portugal</b></span>
+                                        <p class="experience__description">•	Kubernetes Openshift;</p>
+                                        <p class="experience__description">•	Automated deployments to VMs;</p>
+                                        <p class="experience__description">•	Ansible;</p>
+                                        <p class="experience__description">•	Jenkins;</p>
+                                        <p class="experience__description">•	Docker/Docker Compose;</p>
+                                        <p class="experience__description">•	Nagios;</p>
+                                        <p class="experience__description">•	Grafana;</p>
+                                        <p class="experience__description">•	Splunk;</p>
+                                    </div>
+                                </div>
+                        </div>
+                    </section>
+                    <section class="experience section" id="experience">
                     <div class="experience__container bd-grid">
                         <div class="experience__content">
                                 <div class="experience__time">
@@ -275,7 +300,7 @@
                                     <span class="experience__company">2016 | 2021 - <b>Sicoob</b></span>
                                     <p class="experience__description">•	Infrastructure as code: Ansible;</p>
                                     <p class="experience__description">•	Administration of OVM (Oracle VM Manager); 
-                                    <p class="experience__description">•    	Automation of virtual machines using Ansible;</p>
+                                    <p class="experience__description">•    Automation of virtual machines using Ansible;</p>
                                     <p class="experience__description">•	Installation and administration of application servers (Jboss and Tomcat);</p>
                                     <p class="experience__description">•	Source code management tools (Git and Bitbucket);</p>
                                     <p class="experience__description">•	Jenkins continuous integration tool;</p>
@@ -343,7 +368,7 @@
                            <p class="certificate__description">• <b>Git and Github: repository, commit and versions</b><br>Alura | Issued in January 2023 - 8 Hours</p>
                            <p class="certificate__description">• <b>Git and Github: branching strategies, Conflicts and Pull Requests</b><br>Alura | Issued in January 2023 - 8 Hours</p>
                            <p class="certificate__description">• <b>Gitlab CI and Docker: Continuous Delivery Pipeline</b><br>Alura | Issued in August 2022 - 8 Hours</p>
-                           <p class="certificate__description">• <b>Jenkins and Docker: Continuous Delivery Pipeline</b> | Alura | Issued in April 2022 - 12 Hours</p>
+                           <p class="certificate__description">• <b>Jenkins and Docker: Continuous Delivery Pipeline</b><br> Alura | Issued in April 2022 - 12 Hours</p>
                            <p class="certificate__description">• <b>Continuous Delivery: reliability and quality in software deployment</b><br>Alura | Issued in April 2022 - 8 Hours</p>
                            <p class="certificate__description">• <b>Continuous Integration: more quality and less risk in development</b><br>Alura | Issued in April 2022 - 6 Hours</p>
                        </div>
@@ -408,7 +433,7 @@
 
                 <!-- Interesses -->
                 <section class="interests section">
-                    <h2 class="section-title">Interesses</h2>
+                    <h2 class="section-title">Interests</h2>
 
                     <div class="interests__container bd-grid">
                         <div class="interests__content">
