--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                         <span class="experience__line"></span>
                                     </div>
                                     <div class="experience__data bd-grid">
-                                        <h3 class="experience__title">DevOps Consultant</h3>
+                                        <h3 class="experience__title">Senior DevOps Consultant</h3>
                                         <span class="experience__company">2023-Current - <b>Agap2IT Portugal</b></span>
                                         <p class="experience__description">•	Kubernetes Openshift;</p>
                                         <p class="experience__description">•	Automated deployments to VMs;</p>
@@ -272,7 +272,7 @@
                                 </div>
                                 <div class="experience__data bd-grid">
                                     <h3 class="experience__title">DevOps Analyst</h3>
-                                    <span class="experience__company">2022-Current - <b>4Linux</b></span>
+                                    <span class="experience__company">2022-2023 - <b>4Linux</b></span>
                                     <p class="experience__description">•	Docker/Docker Compose/Docker Swarm;</p>
                                     <p class="experience__description">•	AWS and GCP Cloud management;</p>
                                     <p class="experience__description">•	Kubernetes EKS;</p>
