--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li class="nav__item">
                         <a href="#certificates" class="nav__link">
                             <i class="bx bx-award nav__icon"></i>
-                            Courses and Certifications
+                            Courses
                         </a>
                     </li>
 
@@ -116,6 +116,19 @@
                         </a>
 
                     </div>
+                </section>
+
+                <!-- Perfil -->
+                <section class="profile section" id="profile">
+                    <h2 class="section-title">CERTIFICATIONS</h2>
+
+                    <p class="profile__description">
+                        •	Oracle Cloud Infrastructure 2023 Certified Foundations Associate.
+                    </p><br>
+
+                    <p class="profile__description">
+                        •	Google Cloud Essentials.
+                    </p>
                 </section>
 
                 <!-- Perfil -->
@@ -292,7 +305,6 @@
                                 <div class="experience__data bd-grid">
                                     <h3 class="experience__title">Infrastructure and Networks Assistant</h3>
                                     <span class="experience__company">2016 | 2021 - <b>Sicoob</b></span>
-                                    <span class="experience__company">2023-Current - <b>Agap2IT Portugal</b></span>
                                     <p class="experience__description">Professional growth in the technical support area, starting as an intern and becoming the technical leader of a team of 9 people, managing the team and working in the support area as well. At the same time responsible for the infrastructure area of Sicoob Payments, operating Linux servers, CI/CD pipeline and primarily responsible for the area of moving/sending/receiving files through the IBM Connect Direct tool.</p>
                                     <p class="experience__description"><b>Technologies:</b></p>
                                     <p class="experience__description">•	Infrastructure as code: Ansible;</p>
@@ -348,7 +360,7 @@
             </section>
                 <!-- Certificados -->
                 <section class="certificate section" id="certificates">
-                    <h2 class="section-title">Courses e Certifications</h2>
+                    <h2 class="section-title">Courses</h2>
 
                     <div class="certificate__container bd-grid">
                         <div class="certificate__content">
