--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </ul>
           <ul>
             <li>
-              <a href="https://github.com/iamabrantes"><p><br>*To see all completed courses, access the complete resume by clicking here!</p></a>
+              <a href="./Resume.pdf"><p><br>*To see all completed courses, access the complete resume by clicking here!</p></a>
             </li>
           </ul>
         </div>
