--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,10 +10,21 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap"
       rel="stylesheet"
     />
-    <title>Resume</title>
+    <title>Portifólio</title>
   </head>
   <body>
+    <div class="flags">
+      <a href="https://iamabrantes.github.io/"><img src="./assets/brazil.png" alt=""></a>
+      <a href="https://iamabrantes.github.io/resume"><img src="./assets/united-states.png" alt=""></a>
+    </div>
     <header>
+      <div>
+        <img
+          src="https://avatars.githubusercontent.com/u/54941941?s=400&u=dd1d90e84014ad517f65b9f71a743e9cb85dd575&v=4"
+          alt="Jonathan Abrantes"
+        />
+      </div>
+    </header>
       <div>
         <img
           src="https://avatars.githubusercontent.com/u/54941941?s=400&u=dd1d90e84014ad517f65b9f71a743e9cb85dd575&v=4"
