--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <section class="about">
         <div>
-          <h1>About Me / <a href="https://iamabrantes.github.io">Sobre Mim</a> </h1>
+          <h1>About Me</h1>
           <p>With over nine years of experience in Information Technology, I started my career from an internship to a technical leadership role at Sicoob. Later, I gained experience as a DevOps Analyst at 4Linux, dealing with Linux system administration and process automation. Currently, I work as a Senior DevOps Consultant at Agap2IT Portugal, working with advanced technologies such as Kubernetes, Docker, Ansible, Jenkins, and monitoring tools like Nagios and Grafana.</p>
         </div>
       </section>
