--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap"
       rel="stylesheet"
     />
-    <title>Portifólio</title>
+    <title>Currículo</title>
   </head>
   <body>
     <div class="flags">
